# serenedb

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json
libs/iresearch/: CMakeLists.txt  README.md
libs/iresearch/examples/: CMakeLists.txt  basic.cpp
libs/iresearch/include/iresearch/: CMakeLists.txt
libs/iresearch/include/iresearch/analysis/: analyzers.cpp  geo_analyzer.cpp  geo_analyzer.hpp  union_tokenizer.cpp  union_tokenizer.hpp  wildcard_analyzer.cpp  wildcard_analyzer.hpp
libs/iresearch/include/iresearch/columnstore/: column_reader.cpp  column_reader.hpp  column_writer.cpp  column_writer.hpp  format.cpp  format.hpp  hnsw.cpp  hnsw.hpp  merge.cpp  merge.hpp  norm_reader.cpp  norm_reader.hpp  norm_writer.cpp  norm_writer.hpp  read_context.cpp  read_context.hpp  scan.hpp
libs/iresearch/include/iresearch/formats/: formats.hpp  formats_impl.hpp  segment_meta_reader.hpp  segment_meta_writer.hpp
libs/iresearch/include/iresearch/index/: column_info.hpp  document_mask.hpp  field_data.cpp  field_data.hpp  (+20 more)
server/catalog/: CMakeLists.txt  catalog.cpp  catalog.h  database.cpp  database.h  drop_task.cpp  drop_task.h  function.cpp  function.h  fwd.h  geo_validate.h  index.cpp  index.h  inverted_index.cpp  inverted_index.h  local_catalog.cpp  local_catalog.h  object.h  object_dependency.h  pk_spec.h  resolution_table.h  role.cpp  role.h  schema.cpp  schema.h  scorer_options.cpp  scorer_options.h  search_analyzer_impl.cpp  secondary_index.cpp  secondary_index.h  table.cpp  table.h  table_options.cpp  table_options.h  tokenizer.cpp  tokenizer.h  types.h  user_type.cpp  user_type.h  view.cpp  (+2 more)
server/catalog/identifiers/: object_id.h  revision_id.cpp  revision_id.h
server/connector/: CMakeLists.txt  columnstore_materializer.cpp  columnstore_materializer.h  data_sink.cpp  data_sink.hpp  data_source.hpp  duckdb_ann_filter.cpp  duckdb_ann_filter.h  duckdb_catalog.cpp  duckdb_catalog.h  duckdb_client_state.cpp  duckdb_client_state.h  duckdb_constraint_verify.cpp  duckdb_entry_cache.cpp  duckdb_entry_cache.h  duckdb_external_scan.cpp  duckdb_external_scan.h  duckdb_index_scan_entry.cpp  duckdb_index_scan_entry.h  duckdb_index_utils.cpp  duckdb_index_utils.h  duckdb_key_builder.hpp  duckdb_physical_create_index.cpp  duckdb_physical_create_index.h  duckdb_physical_ctas.cpp  duckdb_physical_delete.cpp  duckdb_physical_insert.cpp  duckdb_physical_sst_insert.cpp  duckdb_physical_sst_insert.h  duckdb_physical_update.cpp  duckdb_pk_point_lookup.cpp  duckdb_primary_key.h  duckdb_rocksdb_reader.cpp  duckdb_rocksdb_writer.cpp  duckdb_rocksdb_writer.h  duckdb_scan_base.cpp  duckdb_scan_base.hpp  duckdb_schema_entry.cpp  duckdb_schema_entry.h  duckdb_search_ann_scan.cpp  (+84 more)
server/connector/functions/: search.cpp  search.h  ts_common.hpp  ts_like.cpp  ts_offsets.cpp  ts_to_tsquery.cpp  vector.cpp  vector.h
server/connector/optimizer/: iresearch_plan.cpp  iresearch_plan.h  rocksdb_plan.cpp
server/pg/: CMakeLists.txt  command_executor.cpp  command_executor.h  commands.h  connection_context.cpp  duckdb_sql_statement.h  file_options.h  functions.cpp  geo_tokenizer_options.cpp  geo_tokenizer_options.h  json.tpp  pg_comm_task.cpp  pg_comm_task.h  pg_functions_registration.hpp  pg_types.cpp  pg_types.h  progress_tracker.cpp  progress_tracker.h  serialize.cpp  serialize.h  sql_analyzer_velox.cpp  sql_analyzer_velox.h  sql_collector.cpp  sql_collector.h  sql_resolver.cpp  sql_resolver.h  sql_statement.cpp  sql_utils.cpp  sql_utils.h  system_catalog.cpp  system_catalog.h  system_functions.h  system_table.h  system_views.h  tokenizer_options.cpp  tokenizer_options.h
server/pg/commands/: CMakeLists.txt  alter_table.cpp  create_function.cpp  create_index.cpp  create_table.cpp  create_tsdictionary.cpp  create_view.cpp  drop_object.cpp  rename_object.cpp  vacuum.cpp
server/pg/functions/: CMakeLists.txt  lexize.h  size.cpp  size.h
server/pg/pg_catalog/: fwd.h  pg_attribute.cpp  pg_class.cpp  pg_enum.cpp  pg_index.cpp  pg_namespace.cpp  pg_stat_progress.cpp  pg_stat_progress.h  pg_type.cpp
tests/bench/micro/: CMakeLists.txt  document_mask.cpp  regexp_vs_wildcard.cpp  top_term_collector.cpp
tests/drivers/rust/: Cargo.toml  run.sh
tests/drivers/rust/src/: lib.rs
tests/drivers/rust/tests/: postgres.rs  sqlx.rs  tokio_postgres.rs
tests/libs/iresearch/: CMakeLists.txt  tests_param.hpp
tests/libs/iresearch/analysis/: minhash_tokenizer_test.cpp  union_tokenizer_tests.cpp
tests/libs/iresearch/formats/: columnstore2_test.cpp  formats_11_tests.cpp  formats_12_tests.cpp  formats_13_tests.cpp  formats_15_tests.cpp  formats_test_case_base.cpp  formats_test_case_base.hpp  formats_tests.cpp  sparse_bitmap_test.cpp
tests/libs/iresearch/index/: assert_format.cpp  assert_format.hpp  buffered_column_test.cpp  consolidation_policy_tests.cpp  doc_generator.hpp  index_column_tests.cpp  index_death_tests.cpp  index_profile_tests.cpp  index_tests.cpp  index_tests.hpp  merge_writer_tests.cpp  norm_test.cpp  segment_writer_tests.cpp  sorted_index_tests.cpp
tests/libs/iresearch/parser/: lucene_parser_test.cpp
tests/libs/iresearch/search/: bitset_doc_iterator_test.cpp  block_scoring_test.cpp  bm25_test.cpp  boolean_filter_tests.cpp  boost_query_test.cpp  column_existence_filter_test.cpp  dfi_test.cpp  doc_collector_test.cpp  geo_analyzer_test.cpp  geo_distance_filter_test.cpp  geo_filter_test.cpp  granular_range_filter_tests.cpp  index_reader_test.cpp  indri_dirichlet_test.cpp  levenshtein_filter_test.cpp  lm_test.cpp  nested_filter_test.cpp  ngram_similarity_filter_tests.cpp  phrase_filter_tests.cpp  prefix_filter_test.cpp  proxy_filter_test.cpp  raw_tf_test.cpp  same_position_filter_tests.cpp  search_bench_test.cpp  search_fields.h  terms_filter_test.cpp  tfidf_test.cpp  top_terms_collector_test.cpp  wand_norm_merge_test.cpp  wand_scoring_test.cpp  wand_test.cpp  wildcard_ngram_filter_test.cpp
tests/libs/iresearch/store/: directory_cleaner_tests.cpp  store_utils_tests.cpp
tests/libs/iresearch/utils/: directory_utils_tests.cpp  simd_utils_test.cpp  wkb_parser_test.cpp  write_helpers.cpp
(+441 files in other folders)
