target_sources(
    sereneserver
    PRIVATE
        column_expr.cpp
        database.cpp
        drop_task.cpp
        schema.cpp
        databases.cpp
        local_catalog.cpp
        catalog.cpp
        object.cpp
        table_options.cpp
        format_options.cpp
        storage_options.cpp
        key_generator.cpp
        search_analyzer_impl.cpp
        sql_function_impl.cpp
        table.cpp
        index.cpp
        view.cpp
        function.cpp
        native_functions.cpp
        base_query_view.cpp
        sql_query_view.cpp
        validators.cpp
        sharding_strategy.cpp
        replication_common.cpp
        role.cpp
        secondary_index.cpp
        identity_analyzer.cpp
        inverted_index.cpp
        analyzer.cpp
        mangling.cpp
        tokenizer.cpp
)

add_subdirectory(identifiers)
