add_subdirectory(commands)
add_subdirectory(functions)
target_sources(
    sereneserver
    PRIVATE
        command_executor.cpp
        pg_comm_task.cpp
        pg_feature.cpp
        sql_statement.cpp
        connection_context.cpp
        copy_file.cpp
        pg_types.cpp
        serialize.cpp
        system_catalog.cpp
        pg_catalog/pg_class.cpp
        pg_catalog/pg_index.cpp
        pg_catalog/pg_namespace.cpp
        progress_tracker.cpp
        pg_catalog/pg_stat_progress.cpp
        pg_catalog/pg_type.cpp
        sdb_catalog/sdb_log.cpp
        functions.cpp
        sql_analyzer_velox.cpp
        sql_collector.cpp
        sql_def.cpp
        sql_parser.cpp
        sql_resolver.cpp
        sql_utils.cpp
        isolation_level.cpp
        option_help.cpp
        file_options.cpp
        tokenizer_options.cpp
)
