add_subdirectory(sdb_catalog)
add_subdirectory(commands)
target_sources(
    sereneserver
    PRIVATE
        pg_catalog/pg_attribute.cpp
        pg_catalog/pg_authid.cpp
        pg_catalog/pg_class.cpp
        pg_catalog/pg_constraint.cpp
        pg_catalog/pg_database.cpp
        pg_catalog/pg_enum.cpp
        pg_catalog/pg_index.cpp
        pg_catalog/pg_language.cpp
        pg_catalog/pg_namespace.cpp
        pg_catalog/pg_proc.cpp
        pg_catalog/pg_ts_dict.cpp
        pg_catalog/pg_stat_progress.cpp
        pg_catalog/pg_type.cpp
        information_schema/sql_implementation_info.cpp
        information_schema/sql_parts.cpp
        information_schema/sql_sizing.cpp
        pg_comm_task.cpp
        pg_feature.cpp
        connection_context.cpp
        pg_types.cpp
        serialize.cpp
        system_catalog.cpp
        progress_tracker.cpp
        sdb_catalog/sdb_log.cpp
        sql_utils.cpp
        option_help.cpp
        file_options.cpp
        tokenizer_options.cpp
)
